--- a/openstack/neutron/values.yaml
+++ b/openstack/neutron/values.yaml
@@ -46,6 +46,7 @@ imageName: 'monsoon/loci-neutron'
 # imageVersionASR1k:
 # imageVersionUCSM:
 # imageVersionNSXv3:
+# imageVersionDVS:
 # imageVersionNanny:
 # imageVersionEntanglement:
 # imageVersionNetworkAgent:
