--- a/global/prometheus-alertmanager/templates/config.yaml
+++ b/global/prometheus-alertmanager/templates/config.yaml
@@ -255,7 +255,7 @@ data:
         match_re:
           tier: metal
           severity: critical|warning|info
-          region: staging|qa-de-1
+          region: qa-de-1
 
       # ======= all unrouted should end here ======= 
       - receiver: dev-null
@@ -297,7 +297,7 @@ data:
     # ---- custom webhook handlers ----
     - name: wham_metal
       webhook_configs:
-        - url: "http://ironic-wham/alerts/metal"
+        - url: "https://wham.qa-de-1.cloud.sap/alerts/metal"
 
     # ---- Slack Duty (Alert)Channels ----
     # slack duty metal
