make prometheus-server switchable

--- a/openstack/maia/values.yaml
+++ b/openstack/maia/values.yaml
@@ -32,14 +32,15 @@ maia:
     # reasonable defaults, should be reduced for small regions
     memory:
       expected: 100Mi
-      tolerated: 1Gi
+      tolerated: 400Mi
     cpu:
       # currently maia is used by very few concurrent users
       expected: "10m"
       tolerated: "500m"
 
 # this is the new reused prometheus
-prometheus-server:
+prometheus_server:
+  enabled: False
   image:
     repository: prom/prometheus
     tag: v2.8.0
@@ -70,7 +71,7 @@ prometheus-server:
     name: default
 
   # The log level of the Prometheus.
-  logLevel: debug
+  logLevel: info
 
   # Kubernetes resource requests and limits for this Prometheus.
   # Flagship configuration for now.
