--- a/openstack/maia/templates/maia-secrets.yaml
+++ b/openstack/maia/templates/maia-secrets.yaml
@@ -12,5 +12,7 @@ data:
   tls.crt: {{ default "" .Values.maia.tls_crt | b64enc | quote }}
   tls.key: {{ default "" .Values.maia.tls_key | b64enc | quote }}
 {{- end }}
+{{- if .Values.prometheus_server.enabled }}
   maia_scrape_config.yaml: {{ include "maia/templates/etc/_maia_scrape_config.yaml.tpl" . | b64enc | quote }}
+{{- end }}
 {{- end }}
