reflect limitation to RWO volumes; update to prometheus-server 1.0.7

--- a/openstack/maia/values.yaml
+++ b/openstack/maia/values.yaml
@@ -60,8 +60,8 @@ prometheus_server:
   # Store on disk
   persistence:
     enabled: true
-    # there are not RWO volumens in controlplane
-    accessMode: ReadWriteMany
+    # prom-operator does not support other accessModes than RWO
+    # accessMode: ReadWriteOnce
     size: 300Gi
   rbac:
     create: false
