scrape prometheus metrics

--- a/global/chartmuseum/values.yaml
+++ b/global/chartmuseum/values.yaml
@@ -5,8 +5,14 @@ chartmuseum:
     repository: sapcc/chartmuseum
     tag: v0.8.0-storage
 
+  # Not persistent volume. Use OpenStack Swift backend.
   persistence:
     enabled: false
+
+  service:
+    annotations:
+      prometheus.io/scrape: "true"
+      prometheus.io/port: "8080"
 
   ingress:
     enabled: true
