--- a/openstack/maia/templates/maia-secrets.yaml
+++ b/openstack/maia/templates/maia-secrets.yaml
@@ -1,5 +1,4 @@
-{{- if .Values.maia.enabled }}
-{{- if .Values.maia.tls_crt }}
+{{- if .Values.prometheus_server.enabled }}
 apiVersion: v1
 kind: Secret
 type: Opaque
@@ -8,8 +7,12 @@ metadata:
   name: maia
 
 data:
+{{- if .Values.maia.tls_crt }}
   # the TLS cert will be provided by vice-president, we just need empty shells
-  tls.crt: {{ default "" .Values.maia.tls_crt | b64enc | quote }} 
+  tls.crt: {{ default "" .Values.maia.tls_crt | b64enc | quote }}
   tls.key: {{ default "" .Values.maia.tls_key | b64enc | quote }}
+{{- end }}
+{{- if .Values.prometheus_server.enabled }}
+  maia_scrape_config.yaml: {{ include "maia/templates/etc/_maia_scrape_config.yaml.tpl" . | b64enc | quote }}
 {{- end }}
 {{- end }}
