enable prom operator by default

--- a/system/prometheus-operator/values.yaml
+++ b/system/prometheus-operator/values.yaml
@@ -17,9 +17,9 @@ nodeExporter:
   enabled: false
 
 prometheus-operator:
-  # Disable the prometheus operator by default.
-  # Enable via regional values.
-  enabled: false
+  # Enable the prometheus operator by default.
+  # Disable via regional values.
+  enabled: true
 
   # Just `prometheus`. The operator appends `-operator`.
   nameOverride: prometheus
