cache chart metadata in redis

--- a/global/chartmuseum/values.yaml
+++ b/global/chartmuseum/values.yaml
@@ -40,6 +40,12 @@ chartmuseum:
       # STORAGE_OPENSTACK_CONTAINER:
       # STORAGE_OPENSTACK_REGION:
 
+      # Use redis for caching of chart metadata.
+      # CACHE: redis
+      # CACHE_REDIS_ADDR: redis.chartmuseum.svc.cluster.local:6379
+      # CACHE_REDIS_DB: 0
+      # CACHE_REDIS_PASSWORD:
+
 # Seed OpenStack user and Swift container.
 seed:
   enabled: false
@@ -53,3 +59,11 @@ seed:
   #    projectName:
   #    projectDomainName:
   #    containerName:
+
+# Use redis for caching of chart metadata.
+redis:
+  enabled: false
+  metrics:
+    enabled: true
+  # Defined in secrets.
+  # password:
