--- a/global/chartmuseum/requirements.yaml
+++ b/global/chartmuseum/requirements.yaml
@@ -3,3 +3,8 @@ dependencies:
     repository: https://kubernetes-charts.storage.googleapis.com/
     version: 2.1.0
     condition: chartmuseum.enabled
+
+  - name: redis
+    repository: https://kubernetes-charts.storage.googleapis.com/
+    version: 6.4.4
+    condition: redis.enabled
