--- a/global/chartmuseum/values.yaml
+++ b/global/chartmuseum/values.yaml
@@ -30,6 +30,8 @@ chartmuseum:
     open:
       DISABLE_API: false
       DISABLE_METRICS: false
+
+      # Store charts in OpenStack Swift backend.
       STORAGE: "openstack"
       # Defined in secrets.
       # OS_AUTH_URL:
