enable new accesslevel

--- a/openstack/domain-seeds/templates/domain-ccadmin-seed.yaml
+++ b/openstack/domain-seeds/templates/domain-ccadmin-seed.yaml
@@ -40,6 +40,10 @@ spec:
         role: admin
       - group: CCADMIN_CLOUD_ADMINS
         role: member
+      - group: CCADMIN_BAREMETALMONITORING_ADMIN
+        role: admin
+      - group: CCADMIN_BAREMETALMONITORING_ADMIN
+        role: member
     - name: support
       description: 'Support Teams'
     - name: api_support
