grafana v6 update - it works now with our common postgresql chart

--- a/openstack/grafanasix/templates/grafana-deployment.yaml
+++ b/openstack/grafanasix/templates/grafana-deployment.yaml
@@ -11,6 +11,7 @@ spec:
   template:
     metadata:
       labels:
+        app: grafana
         component: grafana
       annotations:
         checksum/grafana.etc: {{ include "grafanasix/templates/grafana-etc-configmap.yaml" . | sha256sum }}
@@ -40,6 +41,8 @@ spec:
           command:
             - /bin/bash
           args:
+            # - -c
+            # - sleep inf
             - /grafana-bin/grafana-start
           env:
             - name: GF_PATHS_PROVISIONING
