--- a/openstack/grafanasix/templates/grafana-service.yaml
+++ b/openstack/grafanasix/templates/grafana-service.yaml
@@ -9,6 +9,7 @@ metadata:
 spec:
   clusterIP: None
   selector:
+    app: grafana
     component: grafana
   ports:
     - port: {{.Values.grafana.port.public}}
