--- a/openstack/grafanasix/values.yaml
+++ b/openstack/grafanasix/values.yaml
@@ -64,7 +64,8 @@ grafana:
   vice_president: true
   disco: true
   image: grafana/grafana
-  image_version: 6.0.2
+  image_version: 6.1.2
+  # image_version: 5.4.3
   seeding_enabled: true
   log_level: 'Info'
   admin:
