--- a/openstack/ironic/charts/wham/templates/configmap.yaml
+++ b/openstack/ironic/charts/wham/templates/configmap.yaml
@@ -13,5 +13,10 @@ metadata:
 data:
   wham.yaml: |
     handlers:
-      - "baremetal"
+      baremetal:
+          regions:
+            qa-de-1:
+              user: "{{ .Values.global.ipmi_exporter_user }}"
+              password: "{{ .Values.global.ipmi_exporter_user_passwd }}"
+              auth_url: "{{ .Values.os_auth_url }}"
 {{- end }}
