remove symlinks, remove old postgres entries, fix postgres name as otherwise it gets too long

--- a/openstack/grafanasix/templates/postgres-pvclaim.yaml
+++ b/openstack/grafanasix/templates/postgres-pvclaim.yaml
@@ -1,4 +1,4 @@
-{{- if .Values.persistence.enabled }}
+{{- if .Values.postgresql.persistence.enabled }}
 kind: PersistentVolumeClaim
 apiVersion: v1
 metadata:
