--- a/openstack/grafanasix/values.yaml
+++ b/openstack/grafanasix/values.yaml
@@ -19,29 +19,29 @@ service:
 #  requests:
 #    cpu: 100m
 #    memory: 128Mi
-postgres:
-  image: postgres
-  image_version: 9.5
-  persistence:
-    # enabled: true
-    enabled: false
-  user: postgres
-  password: '@/cc/secrets'
-  backup:
-    enabled: false
-    repository: DEFINED-IN-REGION-SECRETS
-    image_version: 'v0.5.15'
-    name: DEFINED-IN-REGION-SECRETS
-    interval_full: 1 hours
-    os_auth_url: DEFINED-IN-REGION-SECRETS
-    os_username: db_backup
-    os_user_domain: Default
-    os_project_name: master
-    os_project_domain: ccadmin
-    os_region_name: DEFINED-IN-REGION-SECRETS
-    os_password: DEFINED-IN-REGION-SECRETS
+#postgres:
+#  image: postgres
+#  image_version: 9.5
+#  persistence:
+#    # enabled: true
+#    enabled: false
+#  user: postgres
+#  password: '@/cc/secrets'
+#  backup:
+#    enabled: false
+#    repository: DEFINED-IN-REGION-SECRETS
+#    image_version: 'v0.5.15'
+#    name: DEFINED-IN-REGION-SECRETS
+#    interval_full: 1 hours
+#    os_auth_url: DEFINED-IN-REGION-SECRETS
+#    os_username: db_backup
+#    os_user_domain: Default
+#    os_project_name: master
+#    os_project_domain: ccadmin
+#    os_region_name: DEFINED-IN-REGION-SECRETS
+#    os_password: DEFINED-IN-REGION-SECRETS
 persistence:
-  enabled: false
+#  enabled: false
   name: storage-grafana-postgres-0
   accessMode: ReadWriteMany
   size: 10Gi
