[supernova]: add blackhilo api endpoint

--- a/global/supernova/templates/deployment.yaml
+++ b/global/supernova/templates/deployment.yaml
@@ -35,6 +35,8 @@ spec:
               value: {{ .Values.auth_scope_domain }}
             - name: AUTH_SCOPE_PROJECT
               value: {{ .Values.auth_scope_project }}
+            - name: BLACKHOLE_ENDPOINT
+              value: {{ .Values.blackhole_endpoint }}
             - name: BLACKHOLE_API_KEY
               value: {{ .Values.blackhole_api_key }}
             - name: BLACKHOLE_API_SECRET
