add prometheus-server to infra-monitoring chart [WIP]

--- a/system/infra-monitoring/requirements.yaml
+++ b/system/infra-monitoring/requirements.yaml
@@ -1,4 +1,9 @@
 dependencies:
+  - name: prometheus-server
+    alias: prometheus_server
+    condition: prometheus_server.enabled
+    repository: file://../../system/prometheus-server
+    version: 1.0.7
   - name: cloudprober-exporter
     repository: file://vendor/cloudprober-exporter
     version: 1.0.0
