--- a/system/infra-monitoring/values.yaml
+++ b/system/infra-monitoring/values.yaml
@@ -1,3 +1,48 @@
+prometheus_server:
+  enabled: false
+
+  image:
+    repository: prom/prometheus
+    tag: v2.8.0
+
+  name: infra-prometheus
+
+  retentionTime: 7d
+
+  additionalScrapeConfigs:
+    name: infra
+    key: infra_scrape_config.yaml
+
+  ingress:
+    enabled: true
+    host: infra-prometheus-scaleout
+
+  # Store on disk
+  persistence:
+    enabled: true
+    # prom-operator does not support other accessModes than RWO
+    # accessMode: ReadWriteOnce
+    size: 100Gi
+
+  rbac:
+    create: false
+
+  serviceAccount:
+    create: false
+    name: default
+
+  # The log level of the Prometheus.
+  logLevel: info
+
+  # Kubernetes resource requests and limits for this Prometheus.
+  resources:
+    requests:
+      cpu: 0.25
+      memory: 1Gi
+    limits:
+      cpu: 1
+      memory: 2Gi
+
 cloudprober-exporter:
   enabled: false
 
