--- a/system/prometheus-server/templates/servicemonitors/endpoint-sd.yaml
+++ b/system/prometheus-server/templates/servicemonitors/endpoint-sd.yaml
@@ -67,4 +67,55 @@ spec:
         - action: labelmap
           replacement: __param_$1
           regex: '__meta_kubernetes_service_annotation_prometheus_io_scrape_param_(.+)'
+
+    - bearerTokenFile: /var/run/secrets/kubernetes.io/serviceaccount/token
+      interval: 60s
+      scrapeTimeout: 55s
+      port: metrics
+      scheme: http
+      honorLabels: true
+      relabelings:
+        - action: keep
+          sourceLabels:
+            - __meta_kubernetes_service_annotation_prometheus_io_scrape
+          regex: "true"
+        - action: keep
+          sourceLabels:
+            - __meta_kubernetes_service_annotation_prometheus_io_targets
+          regex: '.*{{ include "prometheus.name" . }}.*'
+        - action: keep
+          source_labels:
+            - __meta_kubernetes_pod_annotation_prometheus_io_port_1
+          regex: '\d+'
+        - action: keep
+          sourceLabels:
+            - __meta_kubernetes_pod_container_port_number
+            - __meta_kubernetes_pod_container_port_name
+            - __meta_kubernetes_service_annotation_prometheus_io_port_1
+          regex: '(9102;.*;.*)|(.*;metrics;.*)|(.*;.*;\d+)'
+        - sourceLabels:
+            - __meta_kubernetes_service_annotation_prometheus_io_scheme
+          targetLabel: __scheme__
+          regex: '(https?)'
+        - sourceLabels:
+            - __meta_kubernetes_service_annotation_prometheus_io_path
+          targetLabel: __metrics_path__
+          regex: '(.+)'
+        - sourceLabels:
+            - __address__
+            - __meta_kubernetes_service_annotation_prometheus_io_port_1
+          targetLabel: __address__
+          regex: '([^:]+)(?::\d+);(\d+)'
+          replacement: $1:$2
+        - action: labelmap
+          regex: '__meta_kubernetes_service_label_(.+)'
+        - sourceLabels:
+            - __meta_kubernetes_namespace
+          targetLabel: kubernetes_namespace
+        - sourceLabels:
+            - __meta_kubernetes_service_name
+          targetLabel: kubernetes_name
+        - action: labelmap
+          replacement: __param_$1
+          regex: '__meta_kubernetes_service_annotation_prometheus_io_scrape_param_(.+)'
 {{- end }}
