--- a/system/prometheus-server/templates/prometheus-server.yaml
+++ b/system/prometheus-server/templates/prometheus-server.yaml
@@ -108,3 +108,9 @@ spec:
   securityContext:
 {{ toYaml .Values.securityContext | indent 4 }}
   {{ end }}
+
+  {{ if .Values.tolerations }}
+  # The pod tolerations.
+  tolerations:
+{{ toYaml .Values.tolerations | indent 4 }}
+  {{ end }}
