--- a/system/prometheus-server/values.yaml
+++ b/system/prometheus-server/values.yaml
@@ -126,3 +126,7 @@ securityContext:
 serviceDiscoveries:
   endpoints:
     enabled: true
+
+# The pod's tolerations.
+# See https://kubernetes.io/docs/concepts/configuration/taint-and-toleration
+tolerations: []
