add pod toleration

--- a/system/infra-monitoring/values.yaml
+++ b/system/infra-monitoring/values.yaml
@@ -34,6 +34,13 @@ prometheus_server:
   # The log level of the Prometheus.
   logLevel: info
 
+  # Tolerations match the taint
+  tolerations:
+    - key: "context"
+      operator: "Equal"
+      value: "monitoring"
+      effect: "PreferNoSchedule"
+
   # Kubernetes resource requests and limits for this Prometheus.
   resources:
     requests:
