--- a/system/kube-monitoring/charts/certificate-exporter/templates/deployment.yaml
+++ b/system/kube-monitoring/charts/certificate-exporter/templates/deployment.yaml
@@ -19,7 +19,7 @@ spec:
       containers:
         - name: k8s-secrets-certificate-exporter
           image: "{{ .Values.image.repository }}:{{ .Values.image.tag }}"
-          imagePullPolicy: {{ default IfNotPresent .Values.image.pullPolicy }}
+          imagePullPolicy: {{ default "IfNotPresent" .Values.image.pullPolicy }}
           args:
             - certificate-exporter
             - --metric-port={{ required ".Values.metricsPort missing " .Values.metricsPort }}
