fix optional arg

--- a/system/kube-monitoring/charts/certificate-exporter/templates/deployment.yaml
+++ b/system/kube-monitoring/charts/certificate-exporter/templates/deployment.yaml
@@ -25,7 +25,9 @@ spec:
             - --metric-port={{ required ".Values.metricsPort missing " .Values.metricsPort }}
             - --resync-interval={{ required ".Values.resyncInterval missing" .Values.resyncInterval }}
             - --recheck-interval={{ required ".Values.recheckInterval missing" .Values.recheckInterval }}
-            - --namespace={{ required ".Values.namespace missing" .Values.namespace }}
             - --threadiness={{ required ".Values.threadiness missing" .Values.threadiness }}
+            {{ if .Values.namespace }}
+            - --namespace={{ .Values.namespace }}
+            {{ end }}
           ports:
             - containerPort: {{ required ".Values.metricsPort missing" .Values.metricsPort }}
