introduce operated k8s-prometheus pair. configurable deploy vs operated prom

--- a/system/kube-monitoring/charts/prometheus-collector/templates/deployment.yaml
+++ b/system/kube-monitoring/charts/prometheus-collector/templates/deployment.yaml
@@ -1,3 +1,4 @@
+{{- if .Values.global.prometheus_deploy.enabled }}
 apiVersion: extensions/v1beta1
 kind: Deployment
 
@@ -85,3 +86,4 @@ spec:
           configMap:
             name: {{ .Values.global.arista_exporter.configmap_name }}
         {{- end }}
+{{- end }}
