--- a/system/kube-monitoring/charts/prometheus-frontend/templates/deployment.yaml
+++ b/system/kube-monitoring/charts/prometheus-frontend/templates/deployment.yaml
@@ -1,3 +1,4 @@
+{{- if .Values.global.prometheus_deploy.enabled }}
 apiVersion: extensions/v1beta1
 kind: Deployment
 
@@ -65,3 +66,4 @@ spec:
         - name: config
           configMap:
             name: prometheus-frontend
+{{- end }}
