--- a/system/kube-monitoring/charts/prometheus-frontend/templates/secret.yaml
+++ b/system/kube-monitoring/charts/prometheus-frontend/templates/secret.yaml
@@ -1,4 +1,4 @@
-{{- if .Values.tls_crt }}
+{{- if and .Values.global.prometheus_deploy.enabled .Values.tls_crt }}
 apiVersion: v1
 kind: Secret
 type: Opaque
