--- a/system/kube-monitoring/charts/prometheus-collector/templates/config.yaml
+++ b/system/kube-monitoring/charts/prometheus-collector/templates/config.yaml
@@ -1,3 +1,4 @@
+{{- if .Values.global.prometheus_deploy.enabled }}
 apiVersion: v1
 kind: ConfigMap
 metadata:
@@ -25,4 +26,5 @@ data:
         }
       }
     ]
+{{- end }}
 {{- end }}
