--- a/system/kube-monitoring/charts/prometheus-collector/templates/service.yaml
+++ b/system/kube-monitoring/charts/prometheus-collector/templates/service.yaml
@@ -1,3 +1,4 @@
+{{- if .Values.global.prometheus_deploy.enabled }}
 apiVersion: v1
 kind: Service
 metadata:
@@ -8,3 +9,4 @@ spec:
     type: collector
   ports:
     - port: 9090
+{{- end }}
