--- a/system/kube-monitoring/charts/prometheus-frontend/templates/config.yaml
+++ b/system/kube-monitoring/charts/prometheus-frontend/templates/config.yaml
@@ -1,3 +1,4 @@
+{{- if .Values.global.prometheus_deploy.enabled }}
 apiVersion: v1
 kind: ConfigMap
 metadata:
@@ -216,3 +217,4 @@ data:
         - targets:
           - "alertmanager.eu-de-1.cloud.sap"
           - "alertmanager.eu-nl-1.cloud.sap"
+{{- end }}
