--- a/system/kube-monitoring/charts/prometheus-frontend/templates/ingress.yaml
+++ b/system/kube-monitoring/charts/prometheus-frontend/templates/ingress.yaml
@@ -1,3 +1,4 @@
+{{- if .Values.global.prometheus_deploy.enabled }}
 apiVersion: extensions/v1beta1
 kind: Ingress
 
@@ -19,3 +20,4 @@ spec:
           backend:
             serviceName: prometheus-frontend
             servicePort: 9090
+{{- end }}
