--- a/system/kube-monitoring/charts/prometheus-frontend/templates/pvc.yaml
+++ b/system/kube-monitoring/charts/prometheus-frontend/templates/pvc.yaml
@@ -1,3 +1,4 @@
+{{- if .Values.global.prometheus_deploy.enabled }}
 kind: PersistentVolumeClaim
 apiVersion: v1
 metadata:
@@ -11,3 +12,4 @@ spec:
   resources:
     requests:
       storage: {{ .Values.persistence.size | quote }}
+{{- end }}
