--- a/system/kube-monitoring/requirements.yaml
+++ b/system/kube-monitoring/requirements.yaml
@@ -16,3 +16,15 @@ dependencies:
     repository: https://kubernetes-charts.storage.googleapis.com/
     version: 1.8.0
     condition: fluent-bit.enabled
+
+  - name: prometheus-server
+    alias: prometheus-collector-operated
+    repository: https://charts.eu-de-2.cloud.sap
+    version: 1.0.10
+    condition: global.prometheus_operated.enabled
+
+  - name: prometheus-server
+    alias: prometheus-frontend-operated
+    repository: https://charts.eu-de-2.cloud.sap
+    version: 1.0.10
+    condition: global.prometheus_operated.enabled
