--- a/system/kube-monitoring/charts/certificate-exporter/values.yaml
+++ b/system/kube-monitoring/charts/certificate-exporter/values.yaml
@@ -17,3 +17,8 @@ namespace: ""
 
 # Exporter threadiness.
 threadiness:      1
+
+# Creating RBAC resources.
+rbac:
+  create: false
+  serviceAccountName: default
