Fix federating kubernikus_ metrics

--- a/system/kube-monitoring/charts/prometheus-frontend/templates/config.yaml
+++ b/system/kube-monitoring/charts/prometheus-frontend/templates/config.yaml
@@ -190,7 +190,7 @@ data:
           - '{__name__=~"^total"}'
           - '{__name__=~"^success"}'
           - '{__name__=~"^latency"}'
-          - '{__name__=~"^kubernikus_"}'
+          - '{__name__=~"^kubernikus_.*"}'
           - '{job="dns-sd"}'
 
       #add region label to all metrics, don't delete this without knowing what you are doing...
