disbale netapp exporter

--- a/system/infra-monitoring/values.yaml
+++ b/system/infra-monitoring/values.yaml
@@ -54,7 +54,7 @@ cloudprober-exporter:
   enabled: false
 
 netapp-exporter:
-  enabled: true
+  enabled: false
 
 apic_exporters:
   enabled: false
