add infra-prometheus config

--- a/system/infra-monitoring/values.yaml
+++ b/system/infra-monitoring/values.yaml
@@ -10,8 +10,8 @@ prometheus_server:
   retentionTime: 7d
 
   additionalScrapeConfigs:
-    name: infra
-    key: infra_scrape_config.yaml
+    name: infra-prometheus-additional-scrape-config
+    key: scrape-config.yaml
 
   ingress:
     enabled: true
