--- a/system/infra-monitoring/templates/scarpe-config.yaml
+++ b/system/infra-monitoring/templates/scarpe-config.yaml
@@ -8,4 +8,5 @@ metadata:
     prometheus: {{ include "prometheus.name" }}
 
 data:
-  scrape-config.yaml: {{ include (print "prometheus.yaml") . | b64enc -}}
+  scrape-config.yaml: {{ include (print "prometheus.yaml") . | b64enc }}
+{{- end }}
