allow for more memory usage

--- a/openstack/maia/values.yaml
+++ b/openstack/maia/values.yaml
@@ -12,7 +12,7 @@ maia:
   # endpoint_host_public: DEFINED-IN-REGION-SECRETS
   endpoint_port_public: 443
   endpoint_protocol_public: https
-  docker_repo: DEFINED-IN-REGION-SECRETS
+  # docker_repo: DEFINED-IN-REGION-SECRETS
   image_version: '20190313100650'
   debug: "0"
   listen_port: 9091
