--- a/system/infra-monitoring/templates/scarpe-config.yaml
+++ b/system/infra-monitoring/templates/scarpe-config.yaml
@@ -3,10 +3,10 @@ apiVersion: v1
 kind: Secret
 
 metadata:
-  name: {{ include "prometheus.name" }}-additional-scrape-config
+  name: {{ .Values.prometheus_server.name }}-additional-scrape-config
   labels:
-    prometheus: {{ include "prometheus.name" }}
+    prometheus: {{ {{ .Values.prometheus_server.name }} }}
 
 data:
-  scrape-config.yaml: {{ include (print $.Template.BasePath "/_prometheus.yaml.tpl") . | b64enc }}
+  scrape-config.yaml: {{ include (print "_prometheus.yaml.tpl") . | b64enc }}
 {{- end }}
