fix typo in infra-monitoring prometheus scrape config

--- a/system/infra-monitoring/templates/scarpe-config.yaml
+++ b/system/infra-monitoring/templates/scarpe-config.yaml
@@ -5,7 +5,7 @@ kind: Secret
 metadata:
   name: {{ .Values.prometheus_server.name }}-additional-scrape-config
   labels:
-    prometheus: {{ {{ .Values.prometheus_server.name }} }}
+    prometheus: {{ .Values.prometheus_server.name }}
 
 data:
   scrape-config.yaml: {{ include (print "_prometheus.yaml.tpl") . | b64enc }}
