[neutron] mount /lib/modules for neutron-dhcp-agent

--- a/openstack/neutron/templates/daemonset-network_agents.yaml
+++ b/openstack/neutron/templates/daemonset-network_agents.yaml
@@ -36,6 +36,9 @@ spec:
           volumeMounts:
             - mountPath: /var/run
               name: run
+            - mountPath: /lib/modules
+              name: modules
+              readOnly: true
             - mountPath: /neutron-etc
               name: neutron-etc
             - mountPath: /container.init
