--- a/openstack/blackbox/charts/blackbox-tests-datapath/templates/deployment.yaml
+++ b/openstack/blackbox/charts/blackbox-tests-datapath/templates/deployment.yaml
@@ -32,6 +32,13 @@ spec:
                 mode: 0600
       containers:
         - name: pytest
+          resources:
+            requests:
+              cpu: 800m
+              memory: 800M
+            limits:
+              cpu: 1s
+              memory: 1000M
 {{- if typeIs "float64" .Values.global.image.tag  }}{{/* https://github.com/kubernetes/helm/issues/1707 */}}
           image: {{.Values.global.image.repository}}:{{.Values.global.image.tag | printf "%0.f" }}
 {{- else }}
@@ -156,6 +163,13 @@ spec:
             initialDelaySeconds: 15
 
         - name: statsd
+          resources:
+            requests:
+              cpu: 500m
+              memory: 500M
+            limits:
+              cpu: 800m
+              memory: 800M
           image: prom/statsd-exporter:v0.8.1
           imagePullPolicy: IfNotPresent
           ports:
