--- a/openstack/blackbox/charts/blackbox-tests-datapath/templates/deployment.yaml
+++ b/openstack/blackbox/charts/blackbox-tests-datapath/templates/deployment.yaml
@@ -37,7 +37,7 @@ spec:
               cpu: 800m
               memory: 800M
             limits:
-              cpu: 1s
+              cpu: 1000m
               memory: 1000M
 {{- if typeIs "float64" .Values.global.image.tag  }}{{/* https://github.com/kubernetes/helm/issues/1707 */}}
           image: {{.Values.global.image.repository}}:{{.Values.global.image.tag | printf "%0.f" }}
