Set container resource and limit constraints certifivates pods

--- a/openstack/blackbox/charts/blackbox-tests-certificates/templates/deployment.yaml
+++ b/openstack/blackbox/charts/blackbox-tests-certificates/templates/deployment.yaml
@@ -25,6 +25,13 @@ spec:
             claimName: blackbox-tests-certificates
       containers:
         - name: pytest
+          resources:
+            requests:
+              cpu: 500m
+              memory: 500M
+            limits:
+              cpu: 800m
+              memory: 800M
 {{- if typeIs "float64" .Values.global.image.tag  }}{{/* https://github.com/kubernetes/helm/issues/1707 */}}
           image: {{.Values.global.image.repository}}:{{.Values.global.image.tag | printf "%0.f" }}
 {{- else }}
@@ -82,6 +89,13 @@ spec:
             initialDelaySeconds: 15
 
         - name: statsd
+          resources:
+            requests:
+              cpu: 300m
+              memory: 300M
+            limits:
+              cpu: 500m
+              memory: 700M
           image: prom/statsd-exporter:v0.8.1
           imagePullPolicy: IfNotPresent
           ports:
