[keystone] increase memcached cpu resources, since it is constantly throttled

--- a/openstack/keystone/values.yaml
+++ b/openstack/keystone/values.yaml
@@ -115,10 +115,10 @@ api:
       enabled: false
       requests:
         memory: 50Mi
-        cpu: 10m
+        cpu: 50m
       limits:
         memory: 64Mi
-        cpu: 50m
+        cpu: 100m
 
   terminationGracePeriodSeconds: 30
   minReadySeconds: 5
@@ -233,6 +233,18 @@ rabbitmq:
     enabled: true
     password: ""
 
+memcached:
+  memcached:
+    maxItemMemory: 2048
+
+  resources:
+    enabled: true
+    limits:
+      memory: 2560Mi
+      cpu: 1000m
+    requests:
+      memory: 2560Mi
+      cpu: 500m
 
 postgresql:
   custom_repository: true
