parametrize statsd-exporter ttl

--- a/openstack/blackbox/charts/blackbox-tests-integrity/templates/deployment.yaml
+++ b/openstack/blackbox/charts/blackbox-tests-integrity/templates/deployment.yaml
@@ -140,7 +140,7 @@ spec:
             - --statsd.mapping-config=/etc/statsd/statsd-mapping-config.yaml
           ports:
             - name: statsd
-              containerPort: 9125
+              containerPort: {{ .Values.statsd.port}}
               protocol: UDP
             - name: metrics
               containerPort: {{ .Values.global.port_metrics}}
