fix configmap for statsd-exporter

--- a/openstack/blackbox/charts/blackbox-tests-api/templates/deployment.yaml
+++ b/openstack/blackbox/charts/blackbox-tests-api/templates/deployment.yaml
@@ -25,7 +25,7 @@ spec:
             claimName: blackbox-tests-api
         - name: statsd-mapping-config
           configMap:
-            name: statsd-mapping-config
+            name: blackbox-tests-api-statsd-mapping-config
       containers:
         - name: pytest
           resources:
