--- a/openstack/blackbox/charts/blackbox-tests-integrity/templates/deployment.yaml
+++ b/openstack/blackbox/charts/blackbox-tests-integrity/templates/deployment.yaml
@@ -32,7 +32,7 @@ spec:
                 mode: 0600
         - name: statsd-mapping-config
           configMap:
-            name: statsd-mapping-config
+            name: blackbox-tests-integrity-statsd-mapping-config
       containers:
         - name: pytest
 {{- if typeIs "float64" .Values.global.image.tag  }}{{/* https://github.com/kubernetes/helm/issues/1707 */}}
