--- a/openstack/blackbox/charts/blackbox-tests-api/templates/statsd-exporter-configmap.yaml
+++ b/openstack/blackbox/charts/blackbox-tests-api/templates/statsd-exporter-configmap.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: statsd-mapping-config
+  name: blackbox-tests-api-statsd-mapping-config
 
 data:
   statsd-mapping-config.yaml: |
