[blackhole]: add annotations section to blackhole ingress charts

--- a/global/blackhole/templates/ingress.yaml
+++ b/global/blackhole/templates/ingress.yaml
@@ -2,6 +2,8 @@ apiVersion: extensions/v1beta1
 kind: Ingress
 metadata:
   name: blackhole
+  annotations:
+    vice-president: true
 
 spec:
   tls:
