--- a/openstack/blackbox/charts/blackbox-tests-certificates/templates/deployment.yaml
+++ b/openstack/blackbox/charts/blackbox-tests-certificates/templates/deployment.yaml
@@ -23,6 +23,9 @@ spec:
         - name: blackbox-tests-certificates
           persistentVolumeClaim:
             claimName: blackbox-tests-certificates
+        - name: statsd-mapping-config
+          configMap:
+            name: blackbox-tests-certificates-statsd-mapping-config
       containers:
         - name: pytest
           resources:
@@ -98,9 +101,14 @@ spec:
               memory: 700M
           image: prom/statsd-exporter:v0.8.1
           imagePullPolicy: IfNotPresent
+          args:
+            - --statsd.mapping-config=/etc/statsd/statsd-mapping-config.yaml
           ports:
             - name: statsd
               containerPort: 9125
               protocol: UDP
             - name: metrics
               containerPort: {{ .Values.global.port_metrics}}
+          volumeMounts:
+            - name: statsd-mapping-config
+              mountPath: /etc/statsd
