Set container resource and limit constraints canary pods

--- a/openstack/blackbox/charts/blackbox-tests-canary/templates/deployment.yaml
+++ b/openstack/blackbox/charts/blackbox-tests-canary/templates/deployment.yaml
@@ -735,6 +735,13 @@ spec:
             initialDelaySeconds: 15
 
         - name: serial
+          resources:
+            requests:
+              cpu: 500m
+              memory: 500M
+            limits:
+              cpu: 800m
+              memory: 800M
 {{- if typeIs "float64" .Values.global.image.tag  }}{{/* https://github.com/kubernetes/helm/issues/1707 */}}
           image: {{.Values.global.image.repository}}:{{.Values.global.image.tag | printf "%0.f" }}
 {{- else }}
@@ -873,6 +880,13 @@ spec:
             initialDelaySeconds: 15
 
         - name: purger
+          resources:
+            requests:
+              cpu: 500m
+              memory: 500M
+            limits:
+              cpu: 800m
+              memory: 800M
 {{- if typeIs "float64" .Values.global.image.tag  }}{{/* https://github.com/kubernetes/helm/issues/1707 */}}
           image: {{.Values.global.image.repository}}:{{.Values.global.image.tag | printf "%0.f" }}
 {{- else }}
@@ -934,6 +948,13 @@ spec:
             initialDelaySeconds: 15
 
         - name: statsd
+          resources:
+            requests:
+              cpu: 500m
+              memory: 500M
+            limits:
+              cpu: 800m
+              memory: 800M
           image: prom/statsd-exporter:v0.8.1
           imagePullPolicy: IfNotPresent
           args:
