Added Rbac seeding of private network for nova test

--- a/openstack/tempest/nova-tempest/templates/seed.yaml
+++ b/openstack/tempest/nova-tempest/templates/seed.yaml
@@ -112,6 +112,110 @@ spec:
     object_type: network
     object_name: {{ required "Missing rbac_policy_object_name_shared_network value!" .Values.tempest_common.rbac_policy_object_name_shared_network }}
     action: access_as_shared
+  - target_tenant_name: nova-tempest-admin1@tempest
+    object_type: network
+    object_name: {{ required "Missing rbac_policy_object_name_private_network value!" .Values.tempest_common.rbac_policy_object_name_private_network }}
+    action: access_as_shared
+  - target_tenant_name: nova-tempest-admin2@tempest
+    object_type: network
+    object_name: {{ required "Missing rbac_policy_object_name_private_network value!" .Values.tempest_common.rbac_policy_object_name_private_network }}
+    action: access_as_shared
+  - target_tenant_name: nova-tempest-admin3@tempest
+    object_type: network
+    object_name: {{ required "Missing rbac_policy_object_name_private_network value!" .Values.tempest_common.rbac_policy_object_name_private_network }}
+    action: access_as_shared
+  - target_tenant_name: nova-tempest-admin4@tempest
+    object_type: network
+    object_name: {{ required "Missing rbac_policy_object_name_private_network value!" .Values.tempest_common.rbac_policy_object_name_private_network }}
+    action: access_as_shared
+  - target_tenant_name: nova-tempest-admin5@tempest
+    object_type: network
+    object_name: {{ required "Missing rbac_policy_object_name_private_network value!" .Values.tempest_common.rbac_policy_object_name_private_network }}
+    action: access_as_shared
+  - target_tenant_name: nova-tempest-admin6@tempest
+    object_type: network
+    object_name: {{ required "Missing rbac_policy_object_name_private_network value!" .Values.tempest_common.rbac_policy_object_name_private_network }}
+    action: access_as_shared
+  - target_tenant_name: nova-tempest-admin7@tempest
+    object_type: network
+    object_name: {{ required "Missing rbac_policy_object_name_private_network value!" .Values.tempest_common.rbac_policy_object_name_private_network }}
+    action: access_as_shared
+  - target_tenant_name: nova-tempest-admin8@tempest
+    object_type: network
+    object_name: {{ required "Missing rbac_policy_object_name_private_network value!" .Values.tempest_common.rbac_policy_object_name_private_network }}
+    action: access_as_shared
+  - target_tenant_name: nova-tempest1@tempest
+    object_type: network
+    object_name: {{ required "Missing rbac_policy_object_name_private_network value!" .Values.tempest_common.rbac_policy_object_name_private_network }}
+    action: access_as_shared
+  - target_tenant_name: nova-tempest2@tempest
+    object_type: network
+    object_name: {{ required "Missing rbac_policy_object_name_private_network value!" .Values.tempest_common.rbac_policy_object_name_private_network }}
+    action: access_as_shared
+  - target_tenant_name: nova-tempest3@tempest
+    object_type: network
+    object_name: {{ required "Missing rbac_policy_object_name_private_network value!" .Values.tempest_common.rbac_policy_object_name_private_network }}
+    action: access_as_shared
+  - target_tenant_name: nova-tempest4@tempest
+    object_type: network
+    object_name: {{ required "Missing rbac_policy_object_name_private_network value!" .Values.tempest_common.rbac_policy_object_name_private_network }}
+    action: access_as_shared
+  - target_tenant_name: nova-tempest5@tempest
+    object_type: network
+    object_name: {{ required "Missing rbac_policy_object_name_private_network value!" .Values.tempest_common.rbac_policy_object_name_private_network }}
+    action: access_as_shared
+  - target_tenant_name: nova-tempest6@tempest
+    object_type: network
+    object_name: {{ required "Missing rbac_policy_object_name_private_network value!" .Values.tempest_common.rbac_policy_object_name_private_network }}
+    action: access_as_shared
+  - target_tenant_name: nova-tempest7@tempest
+    object_type: network
+    object_name: {{ required "Missing rbac_policy_object_name_private_network value!" .Values.tempest_common.rbac_policy_object_name_private_network }}
+    action: access_as_shared
+  - target_tenant_name: nova-tempest8@tempest
+    object_type: network
+    object_name: {{ required "Missing rbac_policy_object_name_private_network value!" .Values.tempest_common.rbac_policy_object_name_private_network }}
+    action: access_as_shared
+  - target_tenant_name: nova-tempest9@tempest
+    object_type: network
+    object_name: {{ required "Missing rbac_policy_object_name_private_network value!" .Values.tempest_common.rbac_policy_object_name_private_network }}
+    action: access_as_shared
+  - target_tenant_name: nova-tempest10@tempest
+    object_type: network
+    object_name: {{ required "Missing rbac_policy_object_name_private_network value!" .Values.tempest_common.rbac_policy_object_name_private_network }}
+    action: access_as_shared
+  - target_tenant_name: nova-tempest11@tempest
+    object_type: network
+    object_name: {{ required "Missing rbac_policy_object_name_private_network value!" .Values.tempest_common.rbac_policy_object_name_private_network }}
+    action: access_as_shared
+  - target_tenant_name: nova-tempest12@tempest
+    object_type: network
+    object_name: {{ required "Missing rbac_policy_object_name_private_network value!" .Values.tempest_common.rbac_policy_object_name_private_network }}
+    action: access_as_shared
+  - target_tenant_name: nova-tempest13@tempest
+    object_type: network
+    object_name: {{ required "Missing rbac_policy_object_name_private_network value!" .Values.tempest_common.rbac_policy_object_name_private_network }}
+    action: access_as_shared
+  - target_tenant_name: nova-tempest14@tempest
+    object_type: network
+    object_name: {{ required "Missing rbac_policy_object_name_private_network value!" .Values.tempest_common.rbac_policy_object_name_private_network }}
+    action: access_as_shared
+  - target_tenant_name: nova-tempest15@tempest
+    object_type: network
+    object_name: {{ required "Missing rbac_policy_object_name_private_network value!" .Values.tempest_common.rbac_policy_object_name_private_network }}
+    action: access_as_shared
+  - target_tenant_name: nova-tempest16@tempest
+    object_type: network
+    object_name: {{ required "Missing rbac_policy_object_name_private_network value!" .Values.tempest_common.rbac_policy_object_name_private_network }}
+    action: access_as_shared
+  - target_tenant_name: nova-tempest17@tempest
+    object_type: network
+    object_name: {{ required "Missing rbac_policy_object_name_private_network value!" .Values.tempest_common.rbac_policy_object_name_private_network }}
+    action: access_as_shared
+  - target_tenant_name: nova-tempest18@tempest
+    object_type: network
+    object_name: {{ required "Missing rbac_policy_object_name_private_network value!" .Values.tempest_common.rbac_policy_object_name_private_network }}
+    action: access_as_shared
   domains:  
   - name: tempest
     groups:
