--- a/common/postgresql/templates/deployment.yaml
+++ b/common/postgresql/templates/deployment.yaml
@@ -142,8 +142,16 @@ spec:
         image: "{{ .Values.metrics.image }}:{{ .Values.metrics.imageTag }}"
         imagePullPolicy: {{ default "IfNotPresent" .Values.metrics.imagePullPolicy | quote }}
         env:
+        # we need support for password overrides in case passwords have a / in them (that breaks the go pq url connection parser)
+        # hence this special sauce (a %2F replacement for the / will help to please go)
+        # PLEASE DO NOT REMOVE THIS
+        {{- if .Values.postgresPassword }}
+        - name: DATA_SOURCE_NAME
+          value: postgresql://{{ default .Values.postgresUser .Values.global.dbUser }}:{{ .Values.postgresPassword }}@127.0.0.1:5432/{{.Values.postgresDatabase}}?sslmode=disable
+        {{ else }}
         - name: DATA_SOURCE_NAME
           value: postgresql://{{ default .Values.postgresUser .Values.global.dbUser }}:{{ default .Values.postgresPassword .Values.global.dbPassword }}@127.0.0.1:5432/{{.Values.postgresDatabase}}?sslmode=disable
+        {{- end }}
         ports:
         - name: metrics
           containerPort: {{ default 9187 .Values.metrics.port }}
