initial snmp config

--- a/system/infra-monitoring/requirements.yaml
+++ b/system/infra-monitoring/requirements.yaml
@@ -16,3 +16,8 @@ dependencies:
     repository: file://vendor/apic_exporters
     version: 1.0.0
     condition: apic_exporters.enabled
+  - name: snmp-exporter
+    alias: snmp_exporter
+    repository: file://vendor/snmp-exporter
+    version: 1.0.0
+    condition: snmp_exporter.enabled
