[blackhole]: use quotes on boolean values

--- a/global/blackhole/templates/ingress.yaml
+++ b/global/blackhole/templates/ingress.yaml
@@ -3,7 +3,7 @@ kind: Ingress
 metadata:
   name: blackhole
   annotations:
-    vice-president: true   
+    vice-president: "true"   
 
 spec:
   tls:
