Adding new flavor for 4TB Lenovo x3850 with Emulex NICs

--- a/openstack/ironic/templates/seed.yaml
+++ b/openstack/ironic/templates/seed.yaml
@@ -171,6 +171,17 @@ spec:
       "quota:separate": "true"
       "quota:instance_only": "true"
 #      "resources:CUSTOM_ZH2MLX1_1XLARGE": "1"
+  - name: "zh1emx1.1xlarge"
+    id: "1033"
+    vcpus: "72"
+    ram: "4194304"
+    disk: "1228"
+    extra_specs:
+      "catalog:description": HANA Baremetal 4 socket 4TB Haswell
+      "capabilities:cpu_arch": "x86_64"
+      "quota:separate": "true"
+      "quota:instance_only": "true"
+#      "resources:CUSTOM_ZH1EMX1_1XLARGE": "1"
   - name: "zh2mlx1.2xlarge"
     id: "1040"
     vcpus: "176"
