fix frontend retention

--- a/system/kube-monitoring/values.yaml
+++ b/system/kube-monitoring/values.yaml
@@ -72,7 +72,7 @@ prometheus-collector-operated:
 prometheus-frontend-operated:
   name: k8s-frontend
 
-  retentionTime: 1h
+  retentionTime: 7d
 
   additionalScrapeConfigs:
     name: k8s-frontend-additional-scrape-config
