--- a/system/kube-monitoring/values.yaml
+++ b/system/kube-monitoring/values.yaml
@@ -94,6 +94,10 @@ prometheus-frontend-operated:
     endpoints:
       enabled: false
 
+  alertmanagers:
+    - alertmanager.eu-de-1.cloud.sap
+    - alertmanager.eu-nl-1.cloud.sap
+
 prometheus-node-exporter:
   image:
     repository: prom/node-exporter
